--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
             <p>
               Home to a 46-bay, multi-tier, floodlit driving range, powered by
               Toptracer Range technology. Complimented by a practice green and
-              bunker, coffee shop and American Golf Store. There truly is
-              something for everyone as we also boast two outdoor 18-hole
-              dinosaur themed crazy golf courses.
+              bunker, coffee shop and American Golf Store.
             </p>
           </div>
           <img
